5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1590_1446.log
== TEST (2019-03-27 00:31:13) 
-- CODE:
var1 = (float(input("Litros de polpa de frutas: "))
var2 = var1 * 1/3
print(var, 2)

-- ERROR:
File "XXXX", line 2
    var2 = var1 * 1/3
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:31:31) 
-- CODE:
var1 = (float(input("Litros de polpa de frutas: "))
var2 = var1 * 1/3
print (var2)

-- ERROR:
File "XXXX", line 2
    var2 = var1 * 1/3
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:31:56) 
-- CODE:
var1 = (float(input("Litros de polpa de frutas: "))
print(var1)
var2 = var1 * 1/3
print (var2)

-- ERROR:
File "XXXX", line 2
    print(var1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:32:13) 
-- CODE:
litros = (float(input("Litros de polpa de frutas: "))
	


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:32:22) 
-- CODE:
litros = (float(input("Litros de polpa de frutas: "))


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:32:41) 
-- CODE:
litros = float(input("Litros de polpa de frutas: "))


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:33:09) 
-- CODE:
litros = float(input("Litros de polpa de frutas: "))
var2 = litros * 1/3
print(var2)

-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:33:19) 
-- CODE:
litros = float(input("Litros de polpa de frutas: "))
var2 = litros * 1/3
print(var2)

-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:33:30) 
-- CODE:
litros = float(input("Litros de polpa de frutas: "))
var2 = litros * 1/3
print(var2)

-- EXECUTION TIME:
0.231721
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.3333333333333335
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.666666666666667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:33:32) 
-- CODE:
litros = float(input("Litros de polpa de frutas: "))
var2 = litros * 1/3
print(var2)

-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:34:11) 
-- CODE:
litros = float(input("Litros de polpa de frutas: "))
var2 = litros * 1/3
print(var2)
print(round(var2, n))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(var2, n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:34:34) 
-- CODE:
litros = float(input("Litros de polpa de frutas: "))
var2 = litros * 1/3
print(round (var2, n))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round (var2, n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:35:11) 
-- CODE:
litros = float(input("Litros de polpa de frutas: "))
var2 = litros * 1/3
print (round(var2, n))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(var2, n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:35:24) 
-- CODE:
litros = float(input("Litros de polpa de frutas: "))
var2 = litros * 1/3
print (round(var2, 3))



-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:35:29) 
-- CODE:
litros = float(input("Litros de polpa de frutas: "))
var2 = litros * 1/3
print (round(var2, 3))



-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:35:35) 
-- CODE:
litros = float(input("Litros de polpa de frutas: "))
var2 = litros * 1/3
print (round(var2, 3))



-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:35:44) 
-- CODE:
litros = float(input("Litros de polpa de frutas: "))
var2 = litros * 1/3
print (round(var2, 3))



-- EXECUTION TIME:
0.186933
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
